prepared for multipart file stream import WIP